<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>io.github.xermaor</groupId>
    <artifactId>milvus-plus-parent</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>
    <name>milvus-plus</name>
    <description>a tool about milvus</description>
    <url>https://github.com/xermaor/MilvusPlus</url>
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <scm>
        <connection>scm:git:git@github.com:xermaor/MilvusPlus.git</connection>
        <developerConnection>scm:git:git@github.com:xermaor/MilvusPlus.git</developerConnection>
        <url>git@github.com:xermaor/MilvusPlus.git</url>
    </scm>
    <developers>
        <developer>
            <name>xermaor</name>
            <email>140254807@qq.com</email>
            <organization>https://github.com/xermaor</organization>
            <timezone>+8</timezone>
        </developer>
    </developers>

    <modules>
        <module>milvus-plus-core</module>
        <module>milvus-plus-logger</module>
        <module>milvus-plus-solon-plugin</module>
        <module>milvus-plus-boot-starter</module>
    </modules>

    <properties>
        <revision>1.1.0</revision>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven-compiler.version>3.11.0</maven-compiler.version>
        <maven-assembly.version>3.6.0</maven-assembly.version>
        <maven-resources.version>3.3.1</maven-resources.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <solon.version>2.7.6</solon.version>
        <spring-boot.version>3.4.0</spring-boot.version>
        <classgraph.version>4.8.180</classgraph.version>
        <milvus.version>2.6.0</milvus.version>
        <mica-auto.vaersion>2.3.2</mica-auto.vaersion>
        <java.version>21</java.version>
        <javapoet.version>1.13.0</javapoet.version>
        <auto.service.version>1.0</auto.service.version>
        <nexus-staging-maven-plugin.version>1.6.7</nexus-staging-maven-plugin.version>
    </properties>
    <dependencies>

    </dependencies>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.github.xermaor</groupId>
                <artifactId>milvus-plus-core</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>io.github.xermaor</groupId>
                <artifactId>milvus-plus-logger</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>io.github.xermaor</groupId>
                <artifactId>milvus-plus-boot-starter</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>io.github.xermaor</groupId>
                <artifactId>milvus-plus-solon-plugin</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring-boot.version}</version>
            </plugin>

            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>0.8.0</version>
                <extensions>true</extensions>
                <configuration>
                    <!-- 这里的publishingServerId是在settings.xml中配置的server认证信息 -->
                    <publishingServerId>maven-central</publishingServerId>
                    <!-- 这里的autoPublish是自动发布，而不是手动发布 -->
                    <autoPublish>true</autoPublish>
                    <!-- 这里的waitUntil配置为published是等待发布完成，因为发布完成的时间比较长，所以可以不加这个参数 -->
                    <!--                    <waitUntil>published</waitUntil>-->
                    <!-- 这里的deploymentName是发布到中央仓库的名称 -->
                    <deploymentName>${project.groupId}:${project.artifactId}:${project.version}</deploymentName>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>attach-source</id>
                        <phase>verify</phase>
                        <goals>
                            <!--生成源代码的jar -->
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.6.3</version>
                <executions>
                    <execution>
                        <id>attach-javadoc</id>
                        <phase>verify</phase>
                        <goals>
                            <!--生成javadoc的jar -->
                            <goal>jar</goal>
                            <!--生成javadoc的html -->
                            <goal>javadoc</goal>
                        </goals>
                        <configuration>
                            <!--不显示javadoc警告-->
                            <additionalOptions>-Xdoclint:none</additionalOptions>
                            <additionalJOption>-Xdoclint:none</additionalJOption>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- gpg plugin,用于签名认证 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>1.6</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>3.1.4</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <!-- 版本号管理 -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.7.0</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

</project>

